# riptide

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  gate.sh  justfile  riptide.cabal
.github/workflows/: ci.yml  pages.yml  release.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: Main.hs
frontend/: justfile  package-lock.json  package.json  spago.yaml
frontend/design/: Riptide.dc.html  riptide-spec.md
frontend/src/: Main.purs
frontend/test/: Main.purs
specs/001-riptide-mixer/: design-prompts.md  spec.md
specs/003-frontend-scaffold/: plan.md  spec.md  tasks.md
specs/004-frontend-core/: plan.md  spec.md  tasks.md
specs/005-frontend-views/: plan.md  spec.md  tasks.md
specs/006-frontend-score/: plan.md  spec.md  tasks.md
specs/007-dnd-import-export-serve/: plan.md  spec.md  tasks.md
specs/015-backend-domain/: plan.md  spec.md  tasks.md
specs/016-backend-hint-scope/: plan.md  spec.md  tasks.md
specs/017-tidal-stream-playback/: plan.md  spec.md  tasks.md
specs/018-backend-server/: plan.md  spec.md  tasks.md
specs/019-frontend-backend-ws/: plan.md  spec.md  tasks.md
specs/031-state-reconcile/: plan.md  spec.md  tasks.md
specs/032-icon-regressions/: plan.md  spec.md  tasks.md
specs/034-delete-cancel/: plan.md  spec.md  tasks.md
specs/037-compact-controls/: plan.md  spec.md  tasks.md
specs/039-host-setting-cors/: plan.md  spec.md  tasks.md
specs/14-frontend-polish/: plan.md  spec.md  tasks.md
specs/29-frontend-icons/: plan.md  spec.md  tasks.md
src/: Riptide.hs
src/Riptide/: Eval.hs  Playback.hs  Protocol.hs  Server.hs  Session.hs  Store.hs
test/: Spec.hs
test/Riptide/: EvalSpec.hs  PlaybackSpec.hs  ProtocolSpec.hs  ServerSpec.hs  SessionSpec.hs  StoreSpec.hs
(+22 files in other folders)
